--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   path: ^1.9.0
   http: ^1.3.0
   gif: ^2.3.0
+  fl_chart: ^0.71.0
+  intl: ^0.20.2
+  connectivity_plus: ^6.1.4
 
 dev_dependencies:
   flutter_test:
