--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,6 @@ dependencies:
   flutter_dotenv: ^5.2.1
   email_validator: ^3.0.0
   sqflite: ^2.4.1
-  sqflite_common_ffi: ^2.3.4
   path: ^1.9.0
   http: ^1.3.0
   gif: ^2.3.0
@@ -24,6 +23,11 @@ dependencies:
   intl: ^0.20.2
   connectivity_plus: ^6.1.4
   flutter_staggered_animations: ^1.1.1
+
+  test: ^1.24.0
+  mockito: ^5.4.2
+  sqflite_common_ffi: ^2.3.4
+  build_runner: ^2.4.6
 
 dev_dependencies:
   flutter_test:
@@ -44,6 +48,7 @@ flutter:
     - assets/exercises/chest/
     - assets/exercises/legs/
     - assets/exercises/shoulders/
+    - assets/exercises/stretching/
 
 flutter_launcher_icons:
   android: "launcher_icon"
