--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   google_fonts: ^6.2.1
 
   supabase_flutter: ^2.8.4
+  shared_preferences: ^2.2.0
   flutter_dotenv: ^5.2.1
   email_validator: ^3.0.0
   sqflite: ^2.4.1
@@ -25,15 +26,16 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
 
   test: ^1.24.0
-  mockito: ^5.4.2
   sqflite_common_ffi: ^2.3.4
   build_runner: ^2.4.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.4.6
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.13.1
+
 
 flutter:
   uses-material-design: true
