--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: trainings_app
-description: "A new Flutter project."
+name: FitnessPlus
+description: "Корпоративное приложение для занятия спортом."
 publish_to: "none"
 version: 1.0.0+1
 
