--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   supabase_flutter: ^2.8.4
   shared_preferences: ^2.2.0
   flutter_dotenv: ^5.2.1
+  provider: ^6.1.5
   email_validator: ^3.0.0
   sqflite: ^2.4.1
   path: ^1.9.0
